# visualisation-app

./: .gitignore  README.md  imaganet2human.txt  main.py  pyproject.toml  requirements.txt  temp_files.json
backend/: App.py  __init__.py
backend/visualisation/: deepDreamTest.py  gradCamTest.py  saliencyMapTest.py  test.py
backend/visualisation/core/: ClassActivationMapping.py  DeepDream.py  GradCam.py  SaliencyMap.py
backend/visualize/: BaseVisualisation.py  GradCam.py  MethodFactory.py  ModelFactory.py  TensorHelper.py  __init__.py
backend/visualize/factories/: MethodFactory.py  ModelFactory.py  __init__.py
backend/visualize/methods/: BaseVisualisation.py  Cam.py  DeepDream.py  GradCam.py  SaliencyMap.py  __init__.py
backend/visualize/utilities/: __init__.py  utils.py
web/: main.html  package-lock.json  package.json
web/css/: additional-params.css  general.css  header.css  input-form.css  main.css  range-slider.css  visualisation.css
web/js/: Visualisation.js  rSlider.js
